--- a/controlPanel/templates/index.html
+++ b/controlPanel/templates/index.html
@@ -13,7 +13,7 @@
     <script src="./static/controlPanel.js"></script>
 
   </head>
-  <body class="containter-lg">
+  <body class="containter">
     <div class="row justify-content-center">
       <div class="col">
         <div class="d-inline-block form-check form-switch">
@@ -52,5 +52,16 @@
         <input type="range" class="channel-range" min="1" max="13" step="1" id="channel-range" value="0">
       </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col">
+        <textarea class="form-control" rows="3" name="message" id="send-message" placeholder="Send a message."></textarea>
+      </div>
+    </div>
+    <div class="row justify-content-center text-center">
+      <div class="col">
+        <button class="btn btn-outline-secondary" id="send">send</button>
+      </div>
+    </div>
+
   </body>
 </html>
