--- a/controlPanel/templates/index.html
+++ b/controlPanel/templates/index.html
@@ -18,7 +18,21 @@
       <div class="containter">
         <div class="row justify-content-center gx-0 m-1 border border-dark border-1 rounded" id="master-panel">
           <div class="col mx-1  p-3" id="master-settings">
-            <p class="text-center h4">Master Settings</p>
+            <div class="row justify-content-center align-items-center">
+              <div class="col-1">
+                <button class="btn btn-sm btn-outline-secondary mx-1" id="update-status">
+                    +
+                </button>
+              </div>
+              <div class="col-10">
+                <p class="text-center h4">Master Settings</p>
+              </div>
+              <div class="col-1">
+                <button class="btn btn-sm btn-outline-secondary mx-1" id="shutdown">
+                    !
+                </button>
+              </div>
+            </div>
             <hr>
             <div class="row">
               <div class="col">
@@ -394,6 +408,22 @@
                 <button class="btn btn-sm btn-outline-secondary my-1" id="prey0-tone-button">beep</button>
               </div>
             </div>
+            <div class="row justify-content-center text-center align-items-center">
+              <div class="col-1">
+                <button class="btn btn-sm btn-outline-secondary mx-1" id="prey0-ssid-button">
+                  +
+                </button>
+              </div>
+              <div class="col-10">
+                <select class="form-select my-1" id="prey0-ssid-select">
+                </select>
+              </div>
+              <div class="col-1">
+                <div class="d-inline-block form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="prey0-ap-toggle">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- PREY 1 CONTROL PANEL -->
@@ -554,6 +584,22 @@
                 <button class="btn btn-sm btn-outline-secondary my-1" id="prey1-tone-button">beep</button>
               </div>
             </div>
+            <div class="row justify-content-center text-center align-items-center">
+              <div class="col-1">
+                <button class="btn btn-sm btn-outline-secondary mx-1" id="prey1-ssid-button">
+                  +
+                </button>
+              </div>
+              <div class="col-10">
+                <select class="form-select my-1" id="prey1-ssid-select">
+                </select>
+              </div>
+              <div class="col-1">
+                <div class="d-inline-block form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="prey1-ap-toggle">
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- PREY 2 CONTROL PANEL -->
@@ -712,6 +758,22 @@
             <div class="row text-center">
               <div class="col">
                 <button class="btn btn-sm btn-outline-secondary my-1" id="prey2-tone-button">beep</button>
+              </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+              <div class="col-1">
+                <button class="btn btn-sm btn-outline-secondary mx-1" id="prey2-ssid-button">
+                  +
+                </button>
+              </div>
+              <div class="col-10">
+                <select class="form-select my-1" id="prey2-ssid-select">
+                </select>
+              </div>
+              <div class="col-1">
+                <div class="d-inline-block form-check form-switch">
+                  <input class="form-check-input" type="checkbox" id="prey2-ap-toggle">
+                </div>
               </div>
             </div>
           </div>
