Writer - moved join() and subprocess call to reset terminal session just outside while loop in run()

--- a/controlPanel/templates/index.html
+++ b/controlPanel/templates/index.html
@@ -90,7 +90,7 @@
               </div>
               <div class="col">
                 <label for="master-channel-range" class="form-label">wifi channel</label>
-                <input type="range" class="channel-range" min="1" max="13" step="1" id="master-channel-range" value="1">
+                <input type="range" class="form-range" min="1" max="13" step="1" id="master-channel-range" value="1">
                 <span id="master-channel">1</span>
               </div>
             </div>
